# astrid

./: README.md  main.py  pyproject.toml
astrid/: main.py
astrid/static/: app.js
astrid/templates/: gui_test.html  index.html
static/: app.js  styles.css
templates/: index.html
